--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "dependencies": {
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
+        "leaflet": "^1.6.0",
         "lodash": "^4.17.15",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.0-beta.17",
         "react-dom": "^16.13.1",
+        "react-leaflet": "^2.6.3",
         "react-router-dom": "^5.1.2"
     }
 }
