--- a/composer.json
+++ b/composer.json
@@ -30,14 +30,14 @@
         "twig/twig": "^3.0.3"
     },
     "require-dev": {
-        "dama/doctrine-test-bundle": "^6.3",
+        "dama/doctrine-test-bundle": "^6.3.2",
         "friendsofphp/php-cs-fixer": "^2.16.1",
-        "hautelook/alice-bundle": "^2.7",
-        "nelmio/api-doc-bundle": "^3.6",
-        "symfony/browser-kit": "5.0.*",
-        "symfony/maker-bundle": "^1.14",
-        "symfony/phpunit-bridge": "^5.0",
-        "theofidry/alice-data-fixtures": "^1.1"
+        "hautelook/alice-bundle": "^2.7.2",
+        "nelmio/api-doc-bundle": "^3.6.0",
+        "symfony/browser-kit": "^5.0.5",
+        "symfony/maker-bundle": "^1.14.6",
+        "symfony/phpunit-bridge": "^5.0.5",
+        "theofidry/alice-data-fixtures": "^1.1.2"
     },
     "config": {
         "preferred-install": {
