--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/flex": "^1.6.2",
         "symfony/framework-bundle": "^5.0.5",
         "symfony/mailer": "^5.0.5",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/property-access": "^5.0.5",
         "symfony/property-info": "^5.0.5",
         "symfony/security-bundle": "^5.0.5",
