--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "phpdocumentor/reflection-docblock": "^4.3.4",
         "ramsey/uuid": "^3.9.3",
         "sensio/framework-extra-bundle": "^5.5.3",
+        "sentry/sentry-symfony": "^3.4",
         "symfony/console": "^5.0.5",
         "symfony/dotenv": "^5.0.5",
         "symfony/flex": "^1.6.2",
