--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ DATABASE_URL=mysql://root@127.0.0.1:3306/print4health?serverVersion=5.7
 ###> symfony/mailer ###
 MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###< sentry/sentry-symfony ###
