--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.0-beta.17",
         "react-dom": "^16.13.1",
+        "react-ga": "^2.7.0",
         "react-leaflet": "^2.6.3",
         "react-router-dom": "^5.1.2"
     }
