link commitment to maker account

--- a/fixtures/Commitment.yml
+++ b/fixtures/Commitment.yml
@@ -2,4 +2,5 @@ App\Domain\Commitment\Entity\Commitment:
     commitment_{1..200}:
         __construct:
             - '@order_*'
+            - '@maker_address_*'
             - '<numberBetween(1, 10)>'
