--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "axios": "^0.19.2",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "bootstrap": "^4.4.1",
         "leaflet": "^1.6.0",
         "lodash": "^4.17.15",
