--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.9.1",
         "@symfony/webpack-encore": "^0.28.2",
+        "babel-eslint": "^10.1.0",
         "core-js": "^3.0.0",
         "eslint": "^6.8.0",
         "eslint-plugin-react": "^7.19.0",
