--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
-        "doctrine/annotations": "^1.8.0",
+        "doctrine/annotations": "^1.8",
         "doctrine/doctrine-bundle": "^2.0.7",
         "doctrine/doctrine-migrations-bundle": "^2.1.2",
         "doctrine/orm": "^2.7.1",
@@ -25,7 +25,7 @@
         "symfony/security-bundle": "^5.0.5",
         "symfony/serializer": "^5.0.5",
         "symfony/twig-bundle": "^5.0.5",
-        "symfony/validator": "^5.0.5",
+        "symfony/validator": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7.3",
         "symfony/yaml": "^5.0.5",
         "twig/extra-bundle": "^3.0.3",
@@ -39,6 +39,8 @@
         "symfony/browser-kit": "^5.0.5",
         "symfony/maker-bundle": "^1.14.6",
         "symfony/phpunit-bridge": "^5.0.5",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/var-dumper": "5.0.*",
         "theofidry/alice-data-fixtures": "^1.1.2"
     },
     "config": {
