--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,6 +28,9 @@ services:
         arguments:
             $from: '%env(EMAIL_CONTACT)%'
 
+    App\Infrastructure\EventListener\ValidationErrorExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
