--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "@symfony/webpack-encore": "^0.28.2",
         "babel-eslint": "^10.1.0",
         "core-js": "^3.0.0",
+        "cypress": "^4.2.0",
         "eslint": "^6.8.0",
         "eslint-plugin-react": "^7.19.0",
         "node-sass": "^4.13.1",
