--- a/config/packages/dev/nelmio_api_doc.yaml
+++ b/config/packages/dev/nelmio_api_doc.yaml
@@ -13,4 +13,4 @@ nelmio_api_doc:
                 - ^/(things)
                 - ^/(requester)
                 - ^/(commitments)
-                - ^/(maker)
+                - ^/(maker/registration)
