--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Psalm
         uses: docker://vimeo/psalm-github-actions
+        with:
+            secrets: "GITHUB_TOKEN"
 
 #  phpstan:
 #    name: PHPStan
