--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
           uses: actions/checkout@v2
 
       -   name: eslint
-          uses: stefanoeb/eslint-action@1.0.2
-          with:
-            files: assets/js
+          uses: reviewdog/action-eslint@v1
+              with:
+                  github_token: ${{ secrets.github_token }}
+                  eslint_flags: 'assets/js'
