#173 put password recovery to separate service

--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ DATABASE_URL=mysql://root@127.0.0.1:3306/print4health?serverVersion=5.7
 ###> symfony/mailer ###
 MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
-
+EMAIL_CONTACT=contact@print4health.org
 ###> sentry/sentry-symfony ###
 SENTRY_DSN=
 ###< sentry/sentry-symfony ###
