--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    email_contact: '%env(EMAIL_CONTACT)%'
 
 services:
     # default configuration for services in *this* file
@@ -22,6 +23,11 @@ services:
     App\Infrastructure\Controller\:
         resource: '../src/Infrastructure/Controller'
         tags: ['controller.service_arguments']
+
+    App\Domain\PasswordRecovery\Mailer:
+        arguments:
+            $from: '%env(EMAIL_CONTACT)%'
+
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
