--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "axios": "^0.19.2",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "bootstrap": "^4.4.1",
+        "i18next": "^19.3.4",
+        "i18next-browser-languagedetector": "^4.0.2",
+        "i18next-xhr-backend": "^3.2.2",
         "leaflet": "^1.6.0",
         "lodash": "^4.17.15",
         "postal-codes-js": "^2.3.1",
@@ -33,6 +36,7 @@
         "react-bootstrap": "^1.0.0-beta.17",
         "react-dom": "^16.13.1",
         "react-ga": "^2.7.0",
+        "react-i18next": "^11.3.4",
         "react-hook-form": "^5.1.3",
         "react-leaflet": "^2.6.3",
         "react-router-dom": "^5.1.2"
