--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "bootstrap": "^4.4.1",
         "leaflet": "^1.6.0",
         "lodash": "^4.17.15",
+        "postal-codes-js": "^2.3.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.0-beta.17",
