#246 added empty google maps key to .env

--- a/.env
+++ b/.env
@@ -35,3 +35,6 @@ EMAIL_CONTACT=contact@print4health.org
 ###> sentry/sentry-symfony ###
 SENTRY_DSN=
 ###< sentry/sentry-symfony ###
+###> google/geocoding service ###
+GOOGLE_MAPS_API_KEY=
+###< google/geocoding service ###
