added phpunit to github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,19 @@ jobs:
           args: --diff --dry-run --allow-risky=yes
           secrets: "GITHUB_TOKEN"
 
+  phpunit:
+      name: PHPUnit
+      runs-on: ubuntu-18.04
+      steps:
+          - name: Checkout code
+            uses: actions/checkout@v2
+
+          - name: PHPUnit tests
+            uses: php-actions/phpunit@v1
+            with:
+                config: phpunit.xml
+                memory: 256M
+
   eslint:
     name: eslint
     runs-on: ubuntu-18.04
