added phpunit to github actions #2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
           - name: PHPUnit tests
             uses: php-actions/phpunit@v1
             with:
-                config: phpunit.xml
+                config: phpunit.xml.dist
                 memory: 256M
 
   eslint:
