--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,9 @@ jobs:
           - name: Checkout code
             uses: actions/checkout@v2
 
+          - name: Install Dependencies
+            uses: php-actions/composer@v1 # or alternative dependency management
+
           - name: PHPUnit tests
             uses: php-actions/phpunit@v1
             with:
