--- a/composer.json
+++ b/composer.json
@@ -9,25 +9,25 @@
         "doctrine/annotations": "^1.8.0",
         "doctrine/doctrine-bundle": "^2.0.7",
         "doctrine/doctrine-migrations-bundle": "^2.1.2",
-        "doctrine/orm": "^2.7.1",
+        "doctrine/orm": "^2.7.2",
         "phpdocumentor/reflection-docblock": "^4.3.4",
         "ramsey/uuid": "^3.9.3",
         "sensio/framework-extra-bundle": "^5.5.3",
-        "sentry/sentry-symfony": "^3.4",
-        "symfony/console": "^5.0.5",
-        "symfony/dotenv": "^5.0.5",
+        "sentry/sentry-symfony": "^3.4.4",
+        "symfony/console": "^5.0.7",
+        "symfony/dotenv": "^5.0.7",
         "symfony/flex": "^1.6.2",
-        "symfony/framework-bundle": "^5.0.5",
-        "symfony/mailer": "^5.0.5",
-        "symfony/monolog-bundle": "^3.5",
-        "symfony/property-access": "^5.0.5",
-        "symfony/property-info": "^5.0.5",
-        "symfony/security-bundle": "^5.0.5",
-        "symfony/serializer": "^5.0.5",
-        "symfony/twig-bundle": "^5.0.5",
-        "symfony/validator": "^5.0.5",
+        "symfony/framework-bundle": "^5.0.7",
+        "symfony/mailer": "^5.0.7",
+        "symfony/monolog-bundle": "^3.5.0",
+        "symfony/property-access": "^5.0.7",
+        "symfony/property-info": "^5.0.7",
+        "symfony/security-bundle": "^5.0.7",
+        "symfony/serializer": "^5.0.7",
+        "symfony/twig-bundle": "^5.0.7",
+        "symfony/validator": "^5.0.7",
         "symfony/webpack-encore-bundle": "^1.7.3",
-        "symfony/yaml": "^5.0.5",
+        "symfony/yaml": "^5.0.7",
         "twig/extra-bundle": "^3.0.3",
         "twig/twig": "^3.0.3"
     },
@@ -35,13 +35,14 @@
         "dama/doctrine-test-bundle": "^6.3.2",
         "friendsofphp/php-cs-fixer": "^2.16.1",
         "hautelook/alice-bundle": "^2.7.2",
-        "nelmio/api-doc-bundle": "^3.6.0",
-        "symfony/browser-kit": "^5.0.5",
-        "symfony/debug-bundle": "^5.0.5",
+        "nelmio/api-doc-bundle": "^3.6.1",
+        "phpunit/phpunit": "^9.1",
+        "symfony/browser-kit": "^5.0.7",
+        "symfony/debug-bundle": "^5.0.7",
         "symfony/maker-bundle": "^1.14.6",
-        "symfony/phpunit-bridge": "^5.0.5",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/var-dumper": "^5.0.5",
+        "symfony/phpunit-bridge": "^5.0.7",
+        "symfony/profiler-pack": "^1.0.4",
+        "symfony/var-dumper": "^5.0.7",
         "theofidry/alice-data-fixtures": "^1.1.2"
     },
     "config": {
