--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,14 @@ jobs:
   phpunit:
     name: PHPUnit
     runs-on: ubuntu-18.04
+    services:
+        mysql:
+            image: mysql:5.7
+            env:
+                MYSQL_ROOT_PASSWORD: geheim
+            ports:
+                - 3306
+            options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - name: Checkout
         uses: actions/checkout@v2
