--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
         run: "composer install --no-progress --no-suggest --no-interaction --prefer-dist --optimize-autoloader"
 
       - name: run tests
-        run: "php vendor/bin/phpunit"
+        run: "php vendor/bin/phpunit -c phpunit.xml.github"
 
 #  phpunit:
 #      name: PHPUnit
