--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         mysql:
             image: mysql:5.7
             env:
-                MYSQL_ROOT_PASSWORD: geheim
+                MYSQL_ROOT_PASSWORD: password
             ports:
                 - 3306
             options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -70,7 +70,9 @@ jobs:
         run: "composer install --no-progress --no-suggest --no-interaction --prefer-dist --optimize-autoloader"
 
       - name: run tests
-        run: "php vendor/bin/phpunit -c phpunit.xml.github"
+        run: "php vendor/bin/phpunit"
+        env:
+            DATABASE_URL: "mysql://root:password@mysql:3306/app_test?serverVersion=5.7"
 
 #  phpunit:
 #      name: PHPUnit
