--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
       - name: run tests
         run: "php vendor/bin/phpunit"
         env:
-            DATABASE_URL: "mysql://root:password@mysql:3306/app_test?serverVersion=5.7"
+            DATABASE_URL: mysql://root:password@127.0.0.1:${{ job.services.mysql.ports['3306'] }}/app_test?serverVersion=5.7
 
 #  phpunit:
 #      name: PHPUnit
