--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/dotenv": "^5.0.7",
         "symfony/flex": "^1.6.2",
         "symfony/framework-bundle": "^5.0.7",
+        "symfony/http-client": "^5.0.7",
         "symfony/mailer": "^5.0.7",
         "symfony/monolog-bundle": "^3.5.0",
         "symfony/property-access": "^5.0.7",
@@ -41,6 +42,7 @@
         "symfony/debug-bundle": "^5.0.7",
         "symfony/maker-bundle": "^1.14.6",
         "symfony/phpunit-bridge": "^5.0.7",
+        "symfony/polyfill-php80": "^1.15.0",
         "symfony/profiler-pack": "^1.0.4",
         "symfony/var-dumper": "^5.0.7",
         "theofidry/alice-data-fixtures": "^1.1.2"
