--- a/config/packages/test/nelmio_api_doc.yaml
+++ b/config/packages/test/nelmio_api_doc.yaml
@@ -1,16 +1,2 @@
-nelmio_api_doc:
-    documentation:
-        info:
-            title: print4health
-            description: ~
-            version: 1.0.0
-    areas:
-        default:
-            path_patterns:
-                - ^/(login|logout|request-password-reset|reset-password)
-                - ^/(user)
-                - ^/(orders)
-                - ^/(things)
-                - ^/(requester)
-                - ^/(commitments)
-                - ^/(maker/registration)
+imports:
+    - { resource: ../dev/nelmio_api_doc.yaml }
