--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,13 +73,10 @@ jobs:
                 php-version: '7.4'
                 tools: composer
 
-          - name: Install
-            uses: CultureHQ/actions-yarn@master
-            with:
-                args: install
-
           - name: make init
             run: "make init"
+            env:
+                DATABASE_URL: mysql://root:password@127.0.0.1:${{ job.services.mysql.ports['3306'] }}/app_test?serverVersion=5.7
 
           - name: Install
             uses: CultureHQ/actions-yarn@master
