--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,10 +78,10 @@ jobs:
             env:
                 DATABASE_URL: mysql://root:password@127.0.0.1:${{ job.services.mysql.ports['3306'] }}/app_test?serverVersion=5.7
 
-          - name: Install
+          - name: run cypress
             uses: CultureHQ/actions-yarn@master
             with:
-                args: run cypress
+                args: cypress run
 
   phpunit:
     name: PHPUnit
