--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,11 @@ jobs:
             env:
                 DATABASE_URL: mysql://root:password@127.0.0.1:${{ job.services.mysql.ports['3306'] }}/app_test?serverVersion=5.7
 
+          - name: install cypress
+            uses: CultureHQ/actions-yarn@master
+            with:
+                args: cypress install
+
           - name: run cypress
             uses: CultureHQ/actions-yarn@master
             with:
