#237 added data provider for country codes and some minor improvements

--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "DataProvider\\" : "tests/data-provider/"
         }
     },
     "autoload-dev": {
