--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,6 +18,9 @@ services:
         resource: '../src/*'
         exclude: '../src/**/{Alice/Processor/PasswordProcessor.php,Dto,Entity,Migrations,Kernel.php}'
 
+    DataProvider\:
+        resource: '../tests/data-provider/*'
+
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     App\Infrastructure\Controller\:
@@ -35,6 +38,9 @@ services:
     App\Infrastructure\EventListener\ValidationErrorExceptionListener:
         tags:
             - { name: kernel.event_listener, event: kernel.exception }
+
+    DataProvider\Faker\Provider\CountryCodeProvider:
+        tags: [ { name: nelmio_alice.faker.provider } ]
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
