--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,12 @@ jobs:
             env:
                 DATABASE_URL: mysql://root:password@127.0.0.1:${{ job.services.mysql.ports['3306'] }}/app_test?serverVersion=5.7
 
+          - name: Install symfony cli
+            run: "curl -sS https://get.symfony.com/cli/installer | bash"
+
+          - name: run symfony web-server
+            run: "symfony server:start -d"
+
           - name: Cypress run
             uses: cypress-io/github-action@v1
 
