--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,6 +87,12 @@ jobs:
           - name: Cypress run
             uses: cypress-io/github-action@v1
 
+          - uses: actions/upload-artifact@v1
+            if: always()
+            with:
+                name: cypress-videos
+                path: cypress/videos
+
   phpunit:
     name: PHPUnit
     runs-on: ubuntu-18.04
