--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,6 +93,12 @@ jobs:
                 name: cypress-videos
                 path: cypress/videos
 
+          - uses: actions/upload-artifact@v1
+            if: failure()
+            with:
+                name: sf-logs
+                path: var/log
+
   phpunit:
     name: PHPUnit
     runs-on: ubuntu-18.04
