--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,6 +83,8 @@ jobs:
 
           - name: run symfony web-server
             run: "/home/runner/.symfony/bin/symfony server:start -d"
+            env:
+                DATABASE_URL: mysql://root:password@127.0.0.1:${{ job.services.mysql.ports['3306'] }}/app_test?serverVersion=5.7
 
           - name: Cypress run
             uses: cypress-io/github-action@v1
