--- a/fixtures/Requester.yml
+++ b/fixtures/Requester.yml
@@ -3,7 +3,7 @@ App\Domain\User\Entity\Requester:
         __construct:
             - 'requester@print4health.org'
             - 'print4health Test Requester'
-        streetAddress: '<streetAddress()>'
+        addressStreet: '<streetAddress()>'
         postalCode: '<postCode()>'
         addressCity: 'Berlin'
         addressState: 'DE'
@@ -21,7 +21,7 @@ App\Domain\User\Entity\Requester:
         __construct:
             - '<safeEmail()>'
             - '<company()>'
-        streetAddress: '<streetAddress()>'
+        addressStreet: '<streetAddress()>'
         postalCode: '<postCode()>'
         addressCity: '<city()>'
         addressState: 'DE'
@@ -33,7 +33,7 @@ App\Domain\User\Entity\Requester:
         __construct:
             - '<safeEmail()>'
             - '<company()>'
-        streetAddress: '<streetAddress()>'
+        addressStreet: '<streetAddress()>'
         postalCode: '<postCode()>'
         addressCity: 'Bremen'
         addressState: 'DE'
@@ -52,7 +52,7 @@ App\Domain\User\Entity\Requester:
         __construct:
             - '<safeEmail()>'
             - '<company()>'
-        streetAddress: '<streetAddress()>'
+        addressStreet: '<streetAddress()>'
         postalCode: '<postCode()>'
         addressCity: 'Köln'
         addressState: 'DE'
