--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,8 +60,8 @@ jobs:
           maildev:
               image: djfarrelly/maildev
               ports:
-                  - 1080
-                  - 1025
+                  - "1080:80"
+                  - "1025:25"
 
       steps:
           - name: Checkout
@@ -90,7 +90,7 @@ jobs:
           - name: Cypress run
             uses: cypress-io/github-action@v1
             env:
-                CYPRESS_MAILER_BASE_URL: http://127.0.0.1:${{ job.services.maildev.ports['1080'] }}
+                CYPRESS_MAILER_BASE_URL: http://localhost:1080
                 CYPRESS_BASE_URL: http://127.0.0.1:8000
 
           - uses: actions/upload-artifact@v1
