--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
               ports:
                   - "1080:80"
                   - "1025:25"
-              options: --entrypoint="bin/maildev --web 80 --smtp 25 --hide-extensions STARTTLS"
+              entrypoint: 'bin/maildev --web 80 --smtp 25 --hide-extensions STARTTLS'
 
       steps:
           - name: Checkout
