--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,7 @@ jobs:
             run: "/home/runner/.symfony/bin/symfony server:start -d"
             env:
                 DATABASE_URL: mysql://root:password@127.0.0.1:${{ job.services.mysql.ports['3306'] }}/app_test?serverVersion=5.7
-                MAILER_DSN: smtp://localhost:1025
+                MAILER_DSN: smtp://127.0.0.1:${{ job.services.maildev.ports['1025'] }}
 
           - name: Cypress run
             uses: cypress-io/github-action@v1
