--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,6 +31,10 @@ services:
         arguments:
             $contactEmail: '%env(EMAIL_CONTACT)%'
 
+    App\Domain\PasswordRecovery\Mailer:
+        arguments:
+            $from: '%env(EMAIL_CONTACT)%'
+
     App\Infrastructure\Services\GeoCoder:
         arguments:
             $googleApiKey: '%env(GOOGLE_MAPS_API_KEY)%'
