--- a/fixtures/Requester.yml
+++ b/fixtures/Requester.yml
@@ -8,6 +8,8 @@ App\Domain\User\Entity\Requester:
         addressCity: 'Berlin'
         addressState: 'DE'
         password: 'test'
+        institutionType: 'HOSPITAL'
+        description: '<text()>'
         latitude: 52.5170365
         longitude: 13.3888599
 
@@ -26,6 +28,8 @@ App\Domain\User\Entity\Requester:
         addressCity: '<city()>'
         addressState: 'DE'
         password: 'test'
+        institutionType: 'OTHER'
+        description: '<text()>'
         latitude: '<latitude(48.5, 54)>'
         longitude: '<longitude(8.5, 13)>'
 
@@ -38,6 +42,8 @@ App\Domain\User\Entity\Requester:
         addressCity: 'Bremen'
         addressState: 'DE'
         password: 'test'
+        institutionType: 'MAKER_HUB'
+        description: '<text()>'
         latitude: 53.095831720337145
         longitude: 8.815992937273837
         hub: true
@@ -57,6 +63,8 @@ App\Domain\User\Entity\Requester:
         addressCity: 'Köln'
         addressState: 'DE'
         password: 'test'
+        institutionType: 'MAKER_HUB'
+        description: '<text()>'
         latitude: 50.93336083207188
         longitude: 6.951462563588646
         hub: true
