--- a/fixtures/Requester.yml
+++ b/fixtures/Requester.yml
@@ -3,6 +3,7 @@ App\Domain\User\Entity\Requester:
         __construct:
             - 'requester@print4health.org'
             - 'print4health Test Requester'
+            - false
         addressStreet: '<streetAddress()>'
         postalCode: '<postCode()>'
         addressCity: 'Berlin'
@@ -17,12 +18,14 @@ App\Domain\User\Entity\Requester:
         __construct:
             - '<safeEmail()>'
             - '<company()>'
+            - false
         password: 'test'
 
     requester_address_{1..50}:
         __construct:
             - '<safeEmail()>'
             - '<company()>'
+            - false
         addressStreet: '<streetAddress()>'
         postalCode: '<postCode()>'
         addressCity: '<city()>'
@@ -37,6 +40,7 @@ App\Domain\User\Entity\Requester:
         __construct:
             - '<safeEmail()>'
             - '<company()>'
+            - false
         addressStreet: '<streetAddress()>'
         postalCode: '<postCode()>'
         addressCity: 'Bremen'
@@ -58,6 +62,7 @@ App\Domain\User\Entity\Requester:
         __construct:
             - '<safeEmail()>'
             - '<company()>'
+            - false
         addressStreet: '<streetAddress()>'
         postalCode: '<postCode()>'
         addressCity: 'Köln'
