--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,7 +39,8 @@ services:
         arguments:
             $googleApiKey: '%env(GOOGLE_MAPS_API_KEY)%'
 
-    App\Infrastructure\EventListener\ValidationErrorExceptionListener:
+    App\Infrastructure\EventListener\Exception\:
+        resource: '../src/Infrastructure/EventListener/Exception'
         tags:
             - { name: kernel.event_listener, event: kernel.exception }
 
