#251 csfix, added Requester.ContactInfo and pslam/phpstan fix

--- a/fixtures/Requester.yml
+++ b/fixtures/Requester.yml
@@ -11,6 +11,7 @@ App\Domain\User\Entity\Requester:
         password: 'test'
         institutionType: 'HOSPITAL'
         description: '<text()>'
+        contactInfo: '<text()>'
         latitude: 52.5170365
         longitude: 13.3888599
 
@@ -33,6 +34,7 @@ App\Domain\User\Entity\Requester:
         password: 'test'
         institutionType: 'OTHER'
         description: '<text()>'
+        contactInfo: '<text()>'
         latitude: '<latitude(48.5, 54)>'
         longitude: '<longitude(8.5, 13)>'
 
@@ -48,6 +50,7 @@ App\Domain\User\Entity\Requester:
         password: 'test'
         institutionType: 'MAKER_HUB'
         description: '<text()>'
+        contactInfo: '<text()>'
         latitude: 53.095831720337145
         longitude: 8.815992937273837
         hub: true
@@ -70,6 +73,7 @@ App\Domain\User\Entity\Requester:
         password: 'test'
         institutionType: 'MAKER_HUB'
         description: '<text()>'
+        contactInfo: '<text()>'
         latitude: 50.93336083207188
         longitude: 6.951462563588646
         hub: true
