--- a/fixtures/Maker.yml
+++ b/fixtures/Maker.yml
@@ -3,7 +3,7 @@ App\Domain\User\Entity\Maker:
         __construct:
             - 'maker@print4health.org'
             - 'print4health Test Maker'
-            - false
+            - true
         postalCode: '<postCode()>'
         addressCity: 'Berlin'
         addressState: '<randomCountryCode()>'
@@ -11,18 +11,25 @@ App\Domain\User\Entity\Maker:
         latitude: 52.5170365
         longitude: 13.3888599
 
+    maker_not_enabled:
+        __construct:
+            - 'maker-not-enabled@print4health.org'
+            - 'print4health Test Maker Not Enabled'
+            - false
+        password: 'test'
+
     maker_empty_address:
         __construct:
             - '<safeEmail()>'
             - '<company()>'
-            - false
+            - true
         password: 'test'
 
     maker_address_{1..20}:
         __construct:
             - '<safeEmail()>'
             - '<company()>'
-            - false
+            - true
         postalCode: '<postCode()>'
         addressCity: '<city()>'
         addressState: '<randomCountryCode()>'
