--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,7 +128,7 @@ jobs:
         run: "composer install --no-progress --no-suggest --no-interaction --prefer-dist --optimize-autoloader"
 
       - name: run tests
-        run: "php vendor/bin/phpunit"
+        run: "php vendor/bin/phpunit --verbose"
         env:
             DATABASE_URL: mysql://root:password@127.0.0.1:${{ job.services.mysql.ports['3306'] }}/app_test?serverVersion=5.7
 
