--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,6 @@
 parameters:
-	checkGenericClassInNonGenericObjectType: false
-	excludes_analyse:
-		- src/Infrastructure/Migrations
+    checkGenericClassInNonGenericObjectType: false
+    excludes_analyse:
+        - src/Infrastructure/Migrations
+    ignoreErrors:
+        - '#Symfony\\Component\\Validator\\ConstraintViolationListInterface#'
