--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "symfony/framework-bundle": "^5.0.7",
         "symfony/http-client": "^5.0.7",
         "symfony/mailer": "^5.0.7",
-        "symfony/messenger": "5.0.*",
+        "symfony/messenger": "^5.0.7",
         "symfony/monolog-bundle": "^3.5.0",
         "symfony/property-access": "^5.0.7",
         "symfony/property-info": "^5.0.7",
