--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
         "react-bootstrap": "^1.0.0-beta.17",
         "react-dom": "^16.13.1",
         "react-ga": "^2.7.0",
-        "react-i18next": "^11.3.4",
         "react-hook-form": "^5.1.3",
+        "react-i18next": "^11.3.4",
         "react-leaflet": "^2.6.3",
+        "react-remarkable": "^1.1.3",
         "react-router-dom": "^5.1.2"
     }
 }
